--- a/package.json
+++ b/package.json
@@ -9,14 +9,51 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.5",
+    "@hookform/resolvers": "^3.0.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^6.1.0",
+    "@types/formidable": "^2.0.5",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.15.5",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-slick": "^0.23.13",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
+    "datauri": "^4.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "formidable": "^2.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-gesture-handling": "^1.2.2",
+    "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
+    "next-cloudinary": "^4.3.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "react-hook-form": "^7.43.7",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15",
+    "swr": "^2.1.0",
+    "typescript": "5.0.2",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/react-leaflet": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "prisma": "^6.1.0",
+    "tailwindcss": "^3.2.7"
   }
 }
